--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
               <li class="nav-item">
                 <a class="nav-link active" href="about.html">About</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="contact.html">Contact</a>
+              </li>
             </ul>
           <div class="fab-container">
             <div class="fab fab-icon-holder">
