--- a/ch5.html
+++ b/ch5.html
@@ -17,7 +17,11 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
-
+     
+        <link rel="icon"
+          type="img/png"
+          href="images/lml.png"
+     >
   </head>
   <body>
     
@@ -58,7 +62,12 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link active" href="games.html">Games</a>
+              <li class="nav-item">
+                <a class="nav-link active" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="contact.html">Contact</a>
               </li>
             </ul>
           <div class="fab-container">
