--- a/ch7quiz.html
+++ b/ch7quiz.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,7 +17,11 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
-
+     
+        <link rel="icon"
+          type="img/png"
+          href="images/lml.png"
+     >
   </head>
   <body>
     
@@ -43,7 +48,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li>
-                <a class="nav-link" href="chapter7.html">Chapters</a>
+                <a class="nav-link" href="chapter1.html">Chapters</a>
 
               </li>
                 <a class="nav-link" href="quizzes.html">Quizzes</a>
@@ -60,6 +65,9 @@
                 <a class="nav-link active" href="games.html">Games</a>
               <li class="nav-item">
                 <a class="nav-link active" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="contact.html">Contact</a>
               </li>
             </ul>
           <div class="fab-container">
