--- a/py.html
+++ b/py.html
@@ -192,7 +192,12 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link active" href="games.html">Games</a>
+              <li class="nav-item">
+                <a class="nav-link active" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="contact.html">Contact</a>
               </li>
             </ul>
           <div class="fab-container">
